# prompt-encryption-sdk

./: .feynman-learning-log.md  .gitignore  ARCHITECTURE.md  AUTHORS  CONTRIBUTING.md  CROSS_LANGUAGE_CLIENT_WORKLOG.md  POC-log.md  README.md  brainstorm.md  detour-l4-vs-l7.md  pyproject.toml  setup.py
.github/scripts/: send_failure_email.py
.github/workflows/: ci-failure-email.yml  ci.yml
clientcore/: README.md  go.mod
clientcore/cmd/prompt-encryption-client/: main.go
clientcore/internal/attestedclient/: client.go
clientcore/proxy/: proxy.go  proxy_test.go
codelabs/: README.md  cleanup.sh  provision_model.py  run_client.sh  setup.sh
examples/: Dockerfile  requirements.txt  test_client.py  vllm_server.py
poc/: .gitignore
poc/poc1-filterstate/: Cargo.toml  README.md  drive.sh  envoy.yaml  run.sh
poc/poc1-filterstate/src/: lib.rs
poc/poc2-nested-tls/: RESULTS.md  envoy.yaml
poc/poc2-nested-tls/probe/: Cargo.toml
poc/poc3-gating/: RESULTS.md  envoy.yaml
poc/poc3-gating/gate/: Cargo.toml
poc/poc4-ekm/: RESULTS.md  envoy.yaml
poc/poc5-gcp/: RESULTS.md
src/prompt_encryption_sdk/: __init__.py  attested_confidential_inference_test.py  attested_tls.py  attested_tls_test.py  middleware.py  middleware_test.py  wsgi_middleware.py  wsgi_middleware_test.py
tests/: conftest.py
tests/client/: client_test.py  connection_test.py  validator_test.py
tests/ekm/: exporter_integration_test.py  exporter_test.py  init_test.py
tests/integration/: cross_language_client_test.py  local_attested_server.py
tests/server/: asgi_test.py  attestation_test.py  common_test.py  keys_test.py  token_test.py  wsgi_test.py
(+24 files in other folders)
