# //depot/google3/third_party/py/attested_confidential_inference/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel", "grpcio-tools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-confidential-inference"
version = "0.1.0"
description = "A library for Confidential Inference that establishes an end-to-end, attested TLS channel to a workload in a Trusted Execution Environment (TEE)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Google LLC" }
]
dependencies = [
    "absl-py",
    "cryptography",
    "protobuf",
    "PyJWT",
    "requests",
    "tink",
    "urllib3",
    "grpcio"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
server = [
    "starlette",
    "werkzeug",
    "pyOpenSSL",
    "uvicorn",
    "gunicorn",
]

[tool.setuptools.packages.find]
where = ["src"]
